# dj-viz

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  RUNBOOK.md  TODO.md  release-please-config.json
.claude/: CLAUDE.md
.claude/skills/: new-visualization.md  release.md
.github/workflows/: auto-release.yml  build.yml  release.yml
crates/dj-viz/: Cargo.toml  Cargo.toml.bak
crates/dj-viz-api/: Cargo.toml
crates/dj-viz-api/src/: draw.rs  (+4 more)
crates/dj-viz/src/: main.rs  plugin_loader.rs
crates/dj-viz/src/audio/: mod.rs  output_capture.rs
crates/dj-viz/src/audio/utils/: kick_detector.md  kick_detector.rs
crates/dj-viz/src/renderer/: beat_bars.rs  black_hole.rs  gravity_flames.rs  kaleidoscope.rs  lava_blobs.rs  shuffling_skeletons.rs  solar_beat.rs  squares.rs  strobe_grid.rs  tesla_coil.rs
crates/dj-viz/src/renderer/effects/: mod.rs  zoom.rs
crates/dj-viz/src/renderer/scripted/: audio_api.rs
crates/dj-viz/src/ui/: bindings.rs  mod.rs
crates/dj-viz/src/utils/: config.rs  mod.rs  screensaver.rs  viewport.rs
scripts/: debug.rhai  example.rhai  semver.sh
src/: main.rs
src/audio/: analyzer.rs  instrument_tracker.rs  mod.rs  output_capture.rs  source_pipe.rs
src/renderer/: beat_bars.rs  black_hole.rs  crt_numbers.rs  crt_phosphor.rs  dancing_skeletons.rs  debug.rs  feedback.rs  fractal_tree.rs  freq_mandala.rs  gravity_flames.rs  kaleidoscope.rs  lava_blobs.rs  mod.rs  particle_nebula.rs  psychedelic_spiral.rs  shuffling_skeletons.rs  solar_beat.rs  spectro_road.rs  spectrogram.rs  spiral_tunnel.rs  squares.rs  strobe_grid.rs  tesla_coil.rs  vhs_distortion.rs
src/ui/: bindings.rs  help_overlay.rs  mod.rs  text_picker.rs  viz_picker.rs
src/utils/: audio_info.rs  config.rs  mod.rs
(+10 files in other folders)
