[package]
name = "dj-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.19"
cpal = "0.15"
rustfft = "6.2"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rand = "0.9"
enum_dispatch = "0.3"
rhai = "1.19"
bytemuck = { version = "1.14", features = ["derive"] }
wgpu-types = "0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power"] }
