[workspace]
members = [
    "crates/dj-viz",
    "crates/dj-viz-api",
]
resolver = "2"

# Plugins will be added as: "plugins/*" once created

[workspace.dependencies]
nannou = "0.19"
abi_stable = "0.11"
rand = "0.9"
rustfft = "6.2"
cpal = "0.15"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
bytemuck = { version = "1.14", features = ["derive"] }
wgpu-types = "0.17"
libloading = "0.8"
notify = "6.1"

[profile.dev]
opt-level = 2  # Faster plugin dev builds

[profile.release]
lto = "thin"
codegen-units = 16
